# 3D_Game

./: .gitignore  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Game.cpp  Game.h  Paddle.cpp  Paddle.h  PowerUp.cpp  PowerUp.h  README.md  config.json  leaderboard.txt  main.cpp  rotating_cube.cpp
tests/: collision_test.cpp
